# github_actions_cpp

./: .gitattributes  CMakeLists.txt  demo.cpp
.github/workflows/: build-and-test-windows.yml
